--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^6.2.1",
     "monaco-editor-webpack-plugin": "^3.0.1",
     "node-loader": "^2.0.0",
