--- a/package.json
+++ b/package.json
@@ -1,6 +1,26 @@
 {
-  "main": ".webpack/main",
+  "name": "8080simulatorv2",
+  "private": true,
+  "description": "8-bit processor simulator",
+  "author": {
+    "name": "Maciej Żyłka",
+    "email": "mzylka123@gmail.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mac501pl/8080SimV2"
+  },
+  "keywords": [
+    "simulator",
+    "8-bit",
+    "assembly"
+  ],
+  "bugs": {
+    "url": "https://github.com/mac501pl/8080SimV2/issues"
+  },
+  "homepage": "https://github.com/mac501pl/8080SimV2#readme",
   "version": "1.0.0",
+  "main": ".webpack/main",
   "scripts": {
     "start": "cross-env NODE_ENV=development electron-forge start",
     "package": "electron-forge package",
@@ -12,39 +32,41 @@
     "forge": "./tools/forge/forge.config.js"
   },
   "devDependencies": {
-    "@electron-forge/cli": "6.0.0-beta.54",
-    "@electron-forge/maker-deb": "6.0.0-beta.54",
-    "@electron-forge/maker-rpm": "6.0.0-beta.54",
-    "@electron-forge/maker-squirrel": "6.0.0-beta.54",
-    "@electron-forge/maker-zip": "6.0.0-beta.54",
-    "@electron-forge/plugin-webpack": "6.0.0-beta.54",
+    "@electron-forge/cli": "6.0.0-beta.57",
+    "@electron-forge/maker-deb": "6.0.0-beta.57",
+    "@electron-forge/maker-rpm": "6.0.0-beta.57",
+    "@electron-forge/maker-squirrel": "6.0.0-beta.57",
+    "@electron-forge/maker-zip": "6.0.0-beta.57",
+    "@electron-forge/plugin-webpack": "6.0.0-beta.57",
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
     "@types/electron-devtools-installer": "^2.2.0",
-    "@types/node": "^14.14.37",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
+    "@types/node": "^15.6.0",
+    "@types/react": "^17.0.6",
+    "@types/react-dom": "^17.0.5",
     "@types/webpack-env": "^1.16.0",
-    "@typescript-eslint/eslint-plugin": "^4.21.0",
-    "@typescript-eslint/parser": "^4.21.0",
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.2.1",
-    "electron": "^12.0.2",
-    "electron-devtools-installer": "^3.1.1",
-    "eslint": "^7.24.0",
+    "css-loader": "^5.2.6",
+    "electron": "^12.0.9",
+    "electron-devtools-installer": "^3.2.0",
+    "eslint": "^7.27.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.23.3",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
-    "fork-ts-checker-webpack-plugin": "^6.2.1",
-    "monaco-editor-webpack-plugin": "^3.0.1",
+    "fork-ts-checker-webpack-plugin": "^6.2.10",
+    "monaco-editor": "0.24.0",
+    "monaco-editor-webpack-plugin": "3.1.0",
     "node-loader": "^2.0.0",
     "react-hot-loader": "^4.13.0",
     "react-monaco-editor": "^0.43.0",
+    "recoil": "^0.3.1",
     "style-loader": "^2.0.0",
-    "ts-loader": "^8.1.0",
+    "ts-loader": "^9.2.2",
     "typescript": "^4.2.4",
-    "webpack": "^5.31.2"
+    "webpack": "^5.37.1"
   },
   "dependencies": {
     "@hot-loader/react-dom": "^17.0.1",
